fix the social links being shown above the modal on mobile. Fixes #90

--- a/src/Components/NavigationModal/NavigationModal.css
+++ b/src/Components/NavigationModal/NavigationModal.css
@@ -1,12 +1,11 @@
 .modal {
   display: flex;
-  position: absolute;
+  position: fixed;
   z-index: 10;
   left: 0;
   top: 0;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
   align-items: center;
   justify-content: center;
   background-color: #fff;
