--- a/src/Screens/Contact/Contact.css
+++ b/src/Screens/Contact/Contact.css
@@ -47,7 +47,6 @@
 }
 
 .social {
-  z-index: 1;
   font-size: 0.8em;
   display: flex;
   align-items: center;
